0.34.0 - 2022-05-07
--------------------------------------------------------------------

  Breaking changes

    * Msg level `All` is now `Debug`

    * Server configuration now specifies Msglvl as a string, which is
      the lowercase version of the Petrel constant (e.g. "debug" for
      Debug)


0.33.0 - 2022-04-23
--------------------------------------------------------------------

  Breaking changes

    * The petrel client and server are now discrete subpackages within
      the module. No code changes other than those needed to make this
      new organization work

    * See examples for updated usage; improved docs coming soon


0.32.0 - 2021-01-09
--------------------------------------------------------------------

    * Various other changes to be more in-line with modern Golang
      project expectations


0.31.0 - 2020-05-14
--------------------------------------------------------------------

    * Transition to Go module

    * Removal of `petrel.Version`; obviated by module transition

    * Renamed `petrel.Protover` to `petrel.Proto`


0.30.1 - 2017-09-30
--------------------------------------------------------------------

    * Code passed through 'goformat -s'. Also a few typo catches and
      similar cleanups.


0.30.0 - 2016-11-29
--------------------------------------------------------------------

    * Internal changes to accomodate petreljs

          * Binary encoding is now little-endian

          * Transmission marshalling has been decoupled from
            connWrite.

          * connWrite has been split into connWrite and connWriteRaw
            (the former calls the latter to do actual writing of
            data).

          * connRead has been joined by connReadRaw, which reads from
            the connection without unmarshalling the transmission
            being read. connRead does not call connReadRaw.

          * Client has a new method, DispatchRaw, which forwards
            transmissions to/from a server as-is.

