@@ -17,7 +17,7 @@ func badecho(s [][]byte) ([]byte, error) {
 // implement an echo server with a bad command
 func TestServInternalError(t *testing.T) {
 	// instantiate petrel
-	c := &ServerConfig{Sockname: "/tmp/test08.sock", Msglvl: "debug"}
+	c := &Config{Sockname: "/tmp/test08.sock", Msglvl: "debug"}
 	as, err := UnixServer(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
