@@ -11,7 +11,7 @@ import (
 // is defined in test 03.
 
 // DeadUnix returns an instance of Asock whose listener socket closes after 100ms
-func DeadUnix(c *ServerConfig) (*Server, error) {
+func DeadUnix(c *Config) (*Server, error) {
 	l, err := net.ListenUnix("unix", &net.UnixAddr{Name: c.Sockname, Net: "unix"})
 	if err != nil {
 		return nil, err
@@ -22,7 +22,7 @@ func DeadUnix(c *ServerConfig) (*Server, error) {
 
 func TestServENOLISTENER(t *testing.T) {
 	// implement an echo server
-	c := &ServerConfig{Sockname: "/tmp/test06-1.sock", Msglvl: "debug"}
+	c := &Config{Sockname: "/tmp/test06-1.sock", Msglvl: "debug"}
 	as, err := DeadUnix(c)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -46,7 +46,7 @@ func TestServENOLISTENER(t *testing.T) {
 
 func TestServENOLISTENER2(t *testing.T) {
 	// implement an echo server
-	c := &ServerConfig{Sockname: "/tmp/test06-2.sock", Msglvl: "debug"}
+	c := &Config{Sockname: "/tmp/test06-2.sock", Msglvl: "debug"}
 	as, err := DeadUnix(c)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -66,7 +66,7 @@ func TestServENOLISTENER2(t *testing.T) {
 	}
 	// oh no, our petrel is dead. gotta spawn a new one.
 	as.Quit()
-	c = &ServerConfig{Sockname: "/tmp/test06-3.sock", Msglvl: "debug"}
+	c = &Config{Sockname: "/tmp/test06-3.sock", Msglvl: "debug"}
 	as, err = UnixServer(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't spawn second listener: %v", err)
