@@ -13,7 +13,7 @@ import (
 // before trying to talk.
 func TestServConnTimeout(t *testing.T) {
 	// instantiate petrel
-	c := &ServerConfig{Sockname: "/tmp/test07.sock", Timeout: 25, Msglvl: "debug"}
+	c := &Config{Sockname: "/tmp/test07.sock", Timeout: 25, Msglvl: "debug"}
 	as, err := UnixServer(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
