@@ -5,9 +5,16 @@
 
     * Msg level `All` is now `Debug`
 
-    * Server configuration now specifies Msglvl as a string, which is
-      the lowercase version of the Petrel constant (e.g. "debug" for
-      Debug)
+    * Server configuration struct is now named `Config` rather than
+      `ServerConfig`
+
+    * Server configuration now specifies `Msglvl` as a string, which
+      is the lowercase version of the Petrel constant (e.g. `"debug"`
+      for `Debug`)
+
+  Nonbreaking changes
+
+    * `golint` cleanups
 
 
 0.33.0 - 2022-04-23
